--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "d3": "^7.9.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
