--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "animated-llm",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kasnerz.github.io/animated-llm",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -31,6 +34,7 @@
     "eslint": "^9.39.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
