--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "d3": "^7.9.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
