--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://kasnerz.github.io/animated-llm",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build && cp -r public/data dist/data",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
@@ -25,7 +25,8 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "react-tooltip": "^5.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
