--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "animated-llm",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://kasnerz.github.io/animated-llm",
+  "homepage": "https://animatedllm.com",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
@@ -25,6 +25,7 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.6",
     "react-tooltip": "^5.30.0"
   },
