--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.6",
-    "react-tooltip": "^5.30.0"
+    "react-tooltip": "^5.30.0",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
