--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "animated-llm",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://animatedllm.com",
+  "homepage": "https://animatedllm.github.io",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
